[tool.poetry]
name = "traffic-xgb"
version = "0.1.0"
description = "Forecasting hourly interstate traffic volume with XGBoost"
authors = ["Theo Obadiah Teguh"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
xgboost = "^2.1.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
